# ia-model-scan

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  downloader.py  models_catalog.py  pyproject.toml  scanner.py  size_checker.py
.claude/: settings.json
